--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@emotion/core": "10.0.10",
     "@emotion/styled": "10.0.10",
+    "axios": "^0.19.0",
     "body-parser": "1.19.0",
     "bunyan": "1.8.12",
     "cors": "2.8.5",
